curso-gulp-II/sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

08-14-2018 15:31:
/home/wjuniori/git/www/curso-gulp-II/.sublime-gulp-tmp.js:11
      .pipe(gulp.dest('./dist/css/'));
      ^

SyntaxError: Unexpected token .
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at requireGulp (/home/wjuniori/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
